deployment/Infras/mssql/mssql.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mssql
  name: mssql
spec:
  containers:
  - env:
    - name: ACCEPT_EULA
      value: "Y"
    - name: SA_PASSWORD
      value: Pa@@w0rd
    image: mcr.microsoft.com/mssql/server:2019-latest
    name: mssql
    ports:
    - containerPort: 1433
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
