deployment/Infras/mssql/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mssql
  name: mssql
spec:
  ports:
  - port: 1433
    protocol: TCP
    targetPort: 1433
  selector:
    app: mssql
