deployment/Infras/mssql/ingress-mssql.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mssql-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: mssql.compaore.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mssql
            port:
              number: 1433
